# knot-network-nrf24

./: .gitignore  Makefile.am  README  README.md  configure.ac
doc/: nrfd-api.txt
src/: adapter.c  adapter.h  dbus.c  dbus.h  device.c  device.h  main.c  manager.c  manager.h  nrf24.conf  proxy.c  proxy.h  settings.c  settings.h  storage.c  storage.h
test/: test-adapter  test-device
